--- a/extensions/acl-impl/acl-impl-event-default/pom.xml
+++ b/extensions/acl-impl/acl-impl-event-default/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>acl-impl-incident-default</artifactId>
+    <artifactId>acl-impl-event-default</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
