--- a/extensions/dev-plugins/pom.xml
+++ b/extensions/dev-plugins/pom.xml
@@ -13,7 +13,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>plugins</artifactId>
+    <artifactId>dev-plugins</artifactId>
 
     <modules>
         <module>code-generator</module>
