feature : add config with deploy script

--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -135,6 +135,7 @@
     </dependencies>
 
     <build>
+        <finalName>ddd-framework</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
