--- a/extensions/acl-implements/pom.xml
+++ b/extensions/acl-implements/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -18,7 +18,7 @@
     </modules>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>acl-impls</artifactId>
+    <artifactId>acl-implements</artifactId>
 
     <properties>
         <revision>0.0.1-SNAPSHOT</revision>
