--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -188,6 +188,29 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>io.ddd.framework</groupId>
+                <artifactId>ddd-framework-maven-plugin</artifactId>
+                <version>1.0.2-SNAPSHOT</version>
+                <configuration>
+                    <dataSource>
+                        <driverName>com.mysql.cj.jdbc.Driver</driverName>
+                        <url>jdbc:mysql://127.0.0.1:3306/ddd_framework</url>
+                        <username>root</username>
+                        <password>123456</password>
+                    </dataSource>
+                    <config>
+                        <sourcePath>./</sourcePath>
+                        <tablePrefixes>sys_,biz_</tablePrefixes>
+                        <moduleName>sys</moduleName>
+                        <basePackageName>io.ddd.framework</basePackageName>
+                        <tableNames>sys_user,sys_menu</tableNames>
+                        <excludeFields>id,uuid,creator,modifier,gmt_create,gmt_modified,deleted</excludeFields>
+                        <author>麦奇</author>
+                        <email>biaogejiushibiao@outlook.com</email>
+                    </config>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
