fix:fix swagger group

--- a/starter/src/main/resources/application-prod.properties
+++ b/starter/src/main/resources/application-prod.properties
@@ -43,3 +43,7 @@ spring.jackson.time-zone=GMT+8
 
 #jwt token过期时间(分钟)
 jwt.token-expire-time=120
+
+########################################## 接口文档 ##########################################
+
+swagger.enable=false
