--- a/core/core-client/pom.xml
+++ b/core/core-client/pom.xml
@@ -21,5 +21,9 @@
 			<groupId>io.ddd.framework</groupId>
 			<artifactId>share-dataobject</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+		</dependency>
     </dependencies>
 </project>
