feat: add req/rep encry/decry param

--- a/starter/src/main/resources/application-prod.properties
+++ b/starter/src/main/resources/application-prod.properties
@@ -47,3 +47,7 @@ jwt.token-expire-time=120
 ########################################## 接口文档 ##########################################
 
 swagger.enable=false
+
+########################################## 参数加密 ##########################################
+
+des.key=test12341234
