--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -26,6 +26,7 @@
         <arthas.version>3.4.8</arthas.version>
         <commons.lang3.version>3.1</commons.lang3.version>
         <springfox.swagger>2.7.0</springfox.swagger>
+        <jasypt.version>2.1.1</jasypt.version>
     </properties>
 
     <dependencyManagement>
@@ -115,6 +116,11 @@
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct-processor</artifactId>
                 <version>${mapstruct.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.ulisesbocchio</groupId>
+                <artifactId>jasypt-spring-boot-starter</artifactId>
+                <version>${jasypt.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
