--- a/starter/src/main/resources/application-dev.properties
+++ b/starter/src/main/resources/application-dev.properties
@@ -1,3 +1,5 @@
+########################################## 数据库配置 ##########################################
+
 # 数据库驱动：
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # 数据源名称
@@ -7,14 +9,15 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ddd_framework?useUnicode=true&
 # 数据库用户名&密码：
 spring.datasource.username=root
 spring.datasource.password=123456
+# 加密
+#spring.datasource.username=ENC(cFWkipvyS0bbn1fa1OJQlw==)
+#spring.datasource.password=ENC(HEq3r9CH+nORzLQuVPCahpOklZpWFuP7)
 
+########################################## MyBatis ##########################################
 
-#下面这些内容是为了让MyBatis映射
 #指定Mybatis的Mapper文件
-#mybatis.mapper-locations=classpath:mappers/*xml
 mybatis-plus.mapper-locations=classpath:mappers/*xml
 #指定Mybatis的实体目录
-#mybatis.type-aliases-package=io.ddd.framework.mybatis.entity
 mybatis-plus.type-aliases-package=io.ddd.framework.mybatis.entity
 mybatis-plus.global-config.db-config.id-type=auto
 #mybatis-config
@@ -23,6 +26,7 @@ spring.datasource.initialization-mode=NEVER
 #创建表的MySql语句位置
 #spring.datasource.schema=classpath:doc/script/DDL.sql
 
+########################################## 监控 ##########################################
 
 # Actuator Web 访问端口
 management.server.port=8081
@@ -30,25 +34,29 @@ management.endpoints.jmx.exposure.include=*
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
+########################################## 日志 ##########################################
 
 # 日志级别配置
 logging.level.web=debug
 logging.level.root=debug
 
+########################################## 转换器 ##########################################
 
 #统一时间转换
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
+########################################## jwt ##########################################
 
 #jwt token过期时间(分钟)
 jwt.token-expire-time=120
-
 
 ########################################## 接口文档 ##########################################
 
 swagger.enable=true
 
 ########################################## 参数加密 ##########################################
-
-des.key=test12341234
+# 请求/响应加解密key
+aes-encryp-key=12345678abcdefgh
+# 数据库用户名加密解密
+jasypt.encryptor.password=489ee16aa5c4c44f
