--- a/core/adapter/pom.xml
+++ b/core/adapter/pom.xml
@@ -65,6 +65,10 @@
             <groupId>io.ddd.framework</groupId>
             <artifactId>share-dataobject</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
