--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -27,6 +27,7 @@
         <commons.lang3.version>3.1</commons.lang3.version>
         <springfox.swagger>2.7.0</springfox.swagger>
         <jasypt.version>2.1.1</jasypt.version>
+        <commons.codec.version>1.15</commons.codec.version>
     </properties>
 
     <dependencyManagement>
@@ -121,6 +122,11 @@
                 <groupId>com.github.ulisesbocchio</groupId>
                 <artifactId>jasypt-spring-boot-starter</artifactId>
                 <version>${jasypt.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${commons.codec.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
