fix:add maven archetype create project

--- a/core/application/pom.xml
+++ b/core/application/pom.xml
@@ -10,12 +10,11 @@
 	<name>application</name>
 	<dependencies>
 		<dependency>
-            <groupId>io.ddd.framework</groupId>
+            <groupId>${groupId}</groupId>
 			<artifactId>core-client</artifactId>
-            <version>${project.version}</version>
 		</dependency>
 		<dependency>
-            <groupId>io.ddd.framework</groupId>
+            <groupId>${groupId}</groupId>
 			<artifactId>infrastructure</artifactId>
             <version>${project.version}</version>
 			<exclusions>
