--- a/core/adapter/pom.xml
+++ b/core/adapter/pom.xml
@@ -10,7 +10,7 @@
     <name>adapter</name>
     <dependencies>
         <dependency>
-            <groupId>io.ddd.framework</groupId>
+            <groupId>${groupId}</groupId>
             <artifactId>application</artifactId>
         </dependency>
         <dependency>
@@ -33,11 +33,11 @@
             <artifactId>commons-io</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.ddd.framework</groupId>
+            <groupId>${groupId}</groupId>
             <artifactId>core-client</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.ddd.framework</groupId>
+            <groupId>${groupId}</groupId>
             <artifactId>infrastructure</artifactId>
         </dependency>
         <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
@@ -54,7 +54,7 @@
             <artifactId>aspectjweaver</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.ddd.framework</groupId>
+            <groupId>${groupId}</groupId>
             <artifactId>acl</artifactId>
         </dependency>
         <dependency>
@@ -62,7 +62,7 @@
             <artifactId>kaptcha</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.ddd.framework</groupId>
+            <groupId>${groupId}</groupId>
             <artifactId>share-dataobject</artifactId>
         </dependency>
         <dependency>
