--- a/extensions/acl-implements/acl-impl-event-default/pom.xml
+++ b/extensions/acl-implements/acl-impl-event-default/pom.xml
@@ -17,19 +17,19 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.ddd.framework</groupId>
-            <artifactId>acl</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.ddd.framework</groupId>
+            <groupId>${groupId}</groupId>
+            <artifactId>acl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${groupId}</groupId>
             <artifactId>application</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.ddd.framework</groupId>
+            <groupId>${groupId}</groupId>
             <artifactId>application</artifactId>
         </dependency>
     </dependencies>
