--- a/extensions/acl-implements/acl-impl-cached-default/pom.xml
+++ b/extensions/acl-implements/acl-impl-cached-default/pom.xml
@@ -30,6 +30,10 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
