fix: thread pool

--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -201,7 +201,7 @@
             <plugin>
                 <groupId>io.ddd.framework</groupId>
                 <artifactId>ddd-framework-maven-plugin</artifactId>
-                <version>1.0.5-SNAPSHOT</version>
+                <version>1.0.0</version>
                 <configuration>
                     <dataSource>
                         <driverName>com.mysql.cj.jdbc.Driver</driverName>
