--- a/core/core-client/pom.xml
+++ b/core/core-client/pom.xml
@@ -25,5 +25,12 @@
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
 		</dependency>
-    </dependencies>
+		<!-- https://mvnrepository.com/artifact/org.springframework.hateoas/spring-hateoas -->
+		<dependency>
+			<groupId>org.springframework.hateoas</groupId>
+			<artifactId>spring-hateoas</artifactId>
+			<version>1.4.1</version>
+		</dependency>
+
+	</dependencies>
 </project>
